--- a/css/components/shared/card-nft/card-nft.css
+++ b/css/components/shared/card-nft/card-nft.css
@@ -1,5 +1,5 @@
 .card-nft {
-  flex: 1 1 25%;
+  flex: 1 1 calc(33.3333% - 16px);
   padding: 8px;
   border-radius: 8px 8px 8px 56px;
   transition: opacity 200ms ease 0s;
@@ -81,6 +81,17 @@
   font-weight: 600;
   font-size: 16px;
   color: #280d5f;
+}
+
+@media screen and (max-width: 851px) {
+  .card-nft {
+    flex: 1 1 calc(50% - 16px);
+  }
+}
+@media screen and (max-width: 575px) {
+  .card-nft {
+    flex: 1 1 100%;
+  }
 }
 
 /*# sourceMappingURL=card-nft.css.map */
