--- a/css/components/shared/nft-card--lg/nft-card--lg.css
+++ b/css/components/shared/nft-card--lg/nft-card--lg.css
@@ -3,7 +3,11 @@
   background-color: white;
   border-radius: 8px;
   position: relative;
-  flex: 1 1 20%;
+  flex: 1 1 calc(25% - 16px);
+  border: 1px solid #e7e3eb;
+  border-bottom: 3px solid #e7e3eb;
+  max-width: 320px;
+  min-width: 0;
 }
 .card-nft--lg a {
   text-decoration: none;
@@ -11,17 +15,6 @@
 }
 .card-nft--lg a:hover {
   opacity: 0.6;
-}
-.card-nft--lg::after {
-  content: "";
-  position: absolute;
-  top: -1px;
-  right: -1px;
-  bottom: -3px;
-  left: -1px;
-  background-color: #e7e3eb;
-  z-index: -99;
-  border-radius: 8px;
 }
 .card-nft--lg .card-nft__image {
   margin-bottom: 8px;
@@ -55,7 +48,14 @@
   align-items: center;
   margin-top: 8px;
 }
+.card-nft--lg .card-nft__left {
+  min-width: 0;
+}
 .card-nft--lg .card-nft__left p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 120px;
   font-size: 12px;
   color: #7a6eaa;
 }
@@ -69,14 +69,27 @@
 }
 .card-nft--lg .card-nft__bnb-price {
   display: flex;
+  align-items: center;
 }
 .card-nft--lg .card-nft__bnb-price svg {
   margin: 0 4px;
+  height: 16px;
 }
 .card-nft--lg .card-nft__bnb-price p {
   color: #280d5f;
   font-weight: 600;
   font-size: 16px;
+}
+
+@media screen and (max-width: 851px) {
+  .card-nft--lg {
+    flex: 1 1 calc(50% - 16px);
+  }
+}
+@media screen and (max-width: 369px) {
+  .card-nft--lg {
+    flex: 1 1 100%;
+  }
 }
 
 /*# sourceMappingURL=nft-card--lg.css.map */
