--- a/css/components/shared/nft-card--lg/nft-card--lg.scss
+++ b/css/components/shared/nft-card--lg/nft-card--lg.scss
@@ -3,24 +3,17 @@
   background-color: white;
   border-radius: 8px;
   position: relative;
-  flex: 1 1 20%;
+  flex: 1 1 calc(25% - 16px);
+  border: 1px solid #e7e3eb;
+  border-bottom: 3px solid #e7e3eb;
+  max-width: 320px;
+  min-width: 0;
   a {
     text-decoration: none;
     transition: opacity 200ms ease 0s;
     &:hover {
       opacity: 0.6;
     }
-  }
-  &::after {
-    content: "";
-    position: absolute;
-    top: -1px;
-    right: -1px;
-    bottom: -3px;
-    left: -1px;
-    background-color: #e7e3eb;
-    z-index: -99;
-    border-radius: 8px;
   }
   .card-nft {
     &__image {
@@ -58,7 +51,12 @@
       margin-top: 8px;
     }
     &__left {
+      min-width: 0;
       p {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        max-width: 120px;
         font-size: 12px;
         color: #7a6eaa;
       }
@@ -73,8 +71,10 @@
     }
     &__bnb-price {
       display: flex;
+      align-items: center;
       svg {
         margin: 0 4px;
+        height: 16px;
       }
       p {
         color: #280d5f;
@@ -82,5 +82,17 @@
         font-size: 16px;
       }
     }
+  }
+}
+
+@media screen and (max-width: 851px) {
+  .card-nft--lg {
+    flex: 1 1 calc(50% - 16px);
+  }
+}
+
+@media screen and (max-width: 369px) {
+  .card-nft--lg {
+    flex: 1 1 100%;
   }
 }
