--- a/css/components/shared/nav-bottom/nav-bottom.css
+++ b/css/components/shared/nav-bottom/nav-bottom.css
@@ -5,18 +5,21 @@ body {
 .nav-bottom {
   display: flex;
   justify-content: center;
+  overflow: hidden;
   gap: 20px;
   background-color: hsla(0, 0%, 100%, 0.7);
   box-shadow: rgba(133, 133, 133, 0.1) 0px -2px 0px -8px inset;
   position: relative;
 }
 .nav-bottom__item {
-  line-height: 38px;
+  line-height: 42px;
   font-size: 16px;
+  white-space: nowrap;
   font-weight: 400;
   color: #7a6eaa;
   text-decoration: none;
-  padding: 4px 4px 0 4px;
+  padding: 0 4px;
+  scroll-snap-align: start;
 }
 .nav-bottom__item:hover {
   background-color: #eff4f5;
