--- a/css/components/shared/nav-bottom/nav-bottom.scss
+++ b/css/components/shared/nav-bottom/nav-bottom.scss
@@ -4,6 +4,7 @@ body {
 .nav-bottom {
   display: flex;
   justify-content: center;
+  overflow: hidden;
   gap: 20px;
   background-color: hsla(0, 0%, 100%, 0.7);
   box-shadow: rgba(133, 133, 133, 0.1) 0px -2px 0px -8px inset;
@@ -11,12 +12,14 @@ body {
   // margin-top: 127px; da aggiungere quando nav e warning sono in fixed
 
   &__item {
-    line-height: 38px;
+    line-height: 42px;
     font-size: 16px;
+    white-space: nowrap;
     font-weight: 400;
     color: #7a6eaa;
     text-decoration: none;
-    padding: 4px 4px 0 4px;
+    padding: 0 4px;
+    scroll-snap-align: start;
     &:hover {
       background-color: #eff4f5;
     }
