--- a/css/components/sections/crypto-section/crypto-section.css
+++ b/css/components/sections/crypto-section/crypto-section.css
@@ -260,6 +260,4 @@
   .crypto-section__item--width {
     flex-basis: 100%;
   }
-}
-
-/*# sourceMappingURL=crypto-section.css.map */
+}/*# sourceMappingURL=crypto-section.css.map */
