--- a/css/components/sections/design-system-components/design-system-components.css
+++ b/css/components/sections/design-system-components/design-system-components.css
@@ -51,6 +51,4 @@
   justify-content: center;
   margin-bottom: 31px;
   width: 100%;
-}
-
-/*# sourceMappingURL=design-system-components.css.map */
+}/*# sourceMappingURL=design-system-components.css.map */
