--- a/css/components/sections/footer/home-footer.css
+++ b/css/components/sections/footer/home-footer.css
@@ -93,6 +93,7 @@ ul {
 }
 
 .language-menu {
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   flex-direction: column;
@@ -122,12 +123,14 @@ ul {
   line-height: 1.5;
   display: flex;
   align-items: center;
+  width: -moz-fit-content;
   width: fit-content;
 }
 
 .svg-container a {
   display: flex;
   align-items: center;
+  width: -moz-fit-content;
   width: fit-content;
   font-weight: 600;
   line-height: 1.5;
@@ -138,13 +141,11 @@ ul {
   order: 3;
   display: flex;
   flex-direction: row;
-  -webkit-box-pack: justify;
   justify-content: space-between;
 }
 
 .left-bottom-container {
   display: flex;
-  -webkit-box-align: center;
   align-items: center;
   align-content: flex-end;
   flex-direction: row;
@@ -157,7 +158,6 @@ ul {
 
 .eng-svg-button {
   position: relative;
-  -webkit-box-align: center;
   align-items: center;
   border: 0px;
   border-radius: 16px;
@@ -166,7 +166,6 @@ ul {
   font-family: inherit;
   font-size: 16px;
   font-weight: 600;
-  -webkit-box-pack: center;
   justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1;
@@ -192,6 +191,7 @@ ul {
 
 .language-change-selector {
   vertical-align: baseline;
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   flex-direction: column;
@@ -213,7 +213,6 @@ ul {
 }
 .language-change-selector button {
   position: relative;
-  -webkit-box-align: center;
   align-items: center;
   border: 0px;
   cursor: pointer;
@@ -221,7 +220,6 @@ ul {
   font-family: inherit;
   font-size: 16px;
   font-weight: 600;
-  -webkit-box-pack: center;
   justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1;
@@ -264,9 +262,7 @@ ul {
 
 .right-bottom-container {
   display: flex;
-  -webkit-box-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: center;
   align-items: center;
   flex-direction: row;
   order: 2;
@@ -302,7 +298,6 @@ ul {
 
 .buy-cake {
   position: relative;
-  -webkit-box-align: center;
   align-items: center;
   border: 0px;
   margin-left: 0.5rem;
@@ -330,6 +325,4 @@ ul {
 .buy-cake:hover {
   opacity: 0.65;
   transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
-}
-
-/*# sourceMappingURL=home-footer.css.map */
+}/*# sourceMappingURL=home-footer.css.map */
