--- a/css/components/sections/hero-section/hero-section.css
+++ b/css/components/sections/hero-section/hero-section.css
@@ -205,6 +205,4 @@
   .hero-section {
     padding-top: 47px;
   }
-}
-
-/*# sourceMappingURL=hero-section.css.map */
+}/*# sourceMappingURL=hero-section.css.map */
