--- a/css/components/sections/home-2-section/home-2-section.css
+++ b/css/components/sections/home-2-section/home-2-section.css
@@ -96,6 +96,4 @@
   .section-2__wrapper {
     padding: 16px 24px;
   }
-}
-
-/*# sourceMappingURL=home-2-section.css.map */
+}/*# sourceMappingURL=home-2-section.css.map */
