--- a/css/components/sections/seventh-section/seventh-section.css
+++ b/css/components/sections/seventh-section/seventh-section.css
@@ -178,6 +178,4 @@
   .wallet-section__wrapper {
     padding: 16px 24px;
   }
-}
-
-/*# sourceMappingURL=seventh-section.css.map */
+}/*# sourceMappingURL=seventh-section.css.map */
