--- a/css/components/shared/ds-button-style/button-style.css
+++ b/css/components/shared/ds-button-style/button-style.css
@@ -145,6 +145,4 @@
   border: none;
   background-color: rgb(31, 199, 212);
   color: white;
-}
-
-/*# sourceMappingURL=button-style.css.map */
+}/*# sourceMappingURL=button-style.css.map */
