--- a/css/components/shared/home-sixth-section/home-sixth-section.css
+++ b/css/components/shared/home-sixth-section/home-sixth-section.css
@@ -275,6 +275,4 @@
     padding-bottom: 16px;
     border-bottom: 1px solid #d7caec;
   }
-}
-
-/*# sourceMappingURL=home-sixth-section.css.map */
+}/*# sourceMappingURL=home-sixth-section.css.map */
