--- a/css/components/shared/nav-bottom/nav-bottom.css
+++ b/css/components/shared/nav-bottom/nav-bottom.css
@@ -38,6 +38,4 @@ body {
 }
 .nav-bottom__item:last-child {
   margin-right: 20px;
-}
-
-/*# sourceMappingURL=nav-bottom.css.map */
+}/*# sourceMappingURL=nav-bottom.css.map */
