--- a/css/components/shared/card-details/card-details.css
+++ b/css/components/shared/card-details/card-details.css
@@ -73,6 +73,4 @@
   .card-details {
     padding: 16px;
   }
-}
-
-/*# sourceMappingURL=card-details.css.map */
+}/*# sourceMappingURL=card-details.css.map */
