--- a/css/components/shared/card-prediction/card-prediction.css
+++ b/css/components/shared/card-prediction/card-prediction.css
@@ -185,6 +185,10 @@
   text-align: right;
   cursor: not-allowed;
 }
+.card-prediction-back__input input::-moz-placeholder {
+  color: #7a6eaa;
+  font-size: 16px;
+}
 .card-prediction-back__input input::placeholder {
   color: #7a6eaa;
   font-size: 16px;
@@ -212,7 +216,6 @@
   display: inline-flex;
   font-family: inherit;
   font-weight: 600;
-  -webkit-box-pack: center;
   justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1;
@@ -597,6 +600,4 @@
   100% {
     border-color: #7645d9;
   }
-}
-
-/*# sourceMappingURL=card-prediction.css.map */
+}/*# sourceMappingURL=card-prediction.css.map */
