--- a/css/components/shared/carousel/carousel.css
+++ b/css/components/shared/carousel/carousel.css
@@ -31,6 +31,7 @@
   display: block;
   width: 100%;
   border-radius: 32px;
+  max-height: -moz-max-content;
   max-height: max-content;
 }
 .carousel__item {
@@ -1103,6 +1104,4 @@
     flex-direction: column;
     align-items: start;
   }
-}
-
-/*# sourceMappingURL=carousel.css.map */
+}/*# sourceMappingURL=carousel.css.map */
