--- a/css/components/shared/navbar/navbar.css
+++ b/css/components/shared/navbar/navbar.css
@@ -27,7 +27,9 @@
   text-decoration: none;
 }
 .navbar .dropdown {
+  width: -moz-fit-content;
   width: fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .navbar .dropdownbtn__link {
@@ -36,6 +38,7 @@
   height: 48px;
   display: flex;
   align-items: center;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 16px;
   margin: 4px 0;
@@ -96,16 +99,13 @@
 }
 .navbar-l__menu .perpetual, .navbar-l__menu .bridge {
   display: flex;
-  -webkit-box-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
   justify-content: space-between;
   fill: #7a6eaa;
 }
 .navbar-l__menu .dropdown:nth-child(6) {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  -webkit-box-align: center;
   align-items: center;
   fill: #7a6eaa;
 }
@@ -127,7 +127,6 @@
 }
 .navbar-r__currency {
   display: flex;
-  -webkit-box-align: center;
   align-items: center;
   color: inherit;
   text-decoration: none;
@@ -147,6 +146,7 @@
   cursor: pointer;
 }
 .navbar-r__content-lang .dropdown__content {
+  width: -moz-max-content;
   width: max-content;
   -webkit-font-smoothing: antialiased;
   flex-direction: column;
@@ -174,7 +174,6 @@
   min-height: 32px;
   margin: 0 auto;
   position: relative;
-  -webkit-box-align: center;
   align-items: center;
   border: 0px;
   border-radius: 16px;
@@ -183,7 +182,6 @@
   font-family: inherit;
   font-size: 16px;
   font-weight: 600;
-  -webkit-box-pack: center;
   justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1;
@@ -253,7 +251,6 @@
 }
 .navbar .connect-wallet .menu-button {
   position: relative;
-  -webkit-box-align: center;
   align-items: center;
   border: 0px;
   border-radius: 16px;
@@ -263,7 +260,6 @@
   font-family: inherit;
   font-size: 16px;
   font-weight: 600;
-  -webkit-box-pack: center;
   justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1;
@@ -431,6 +427,4 @@
 }
 .menu-is-open #navbar-sticky {
   filter: none;
-}
-
-/*# sourceMappingURL=navbar.css.map */
+}/*# sourceMappingURL=navbar.css.map */
