--- a/css/components/shared/scrollbar/scrollbar.css
+++ b/css/components/shared/scrollbar/scrollbar.css
@@ -10,6 +10,4 @@
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px #eeeaf4;
   border-radius: 10px;
-}
-
-/*# sourceMappingURL=scrollbar.css.map */
+}/*# sourceMappingURL=scrollbar.css.map */
