--- a/css/components/sections/crypto-section/crypto-section.scss
+++ b/css/components/sections/crypto-section/crypto-section.scss
@@ -125,25 +125,43 @@
         color: #7645d9;
       }
     }
-    button {
-      border: none;
-      background-color: transparent;
-      padding: 2px 12px;
-      svg {
-        fill: #7a6eaa;
-        display: block;
-      }
+  }
+  &__btn {
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    padding: 2px 12px;
+    svg {
+      fill: #7a6eaa;
+      display: block;
     }
   }
   &__bottom {
     display: flex;
     flex-direction: column;
+    position: relative;
+    min-height: 80px;
+    overflow: hidden;
   }
   &__content {
     display: flex;
     min-height: 80px;
-    &--syrup {
-      display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    transition: 500ms;
+
+    &--active {
+      position: absolute;
+      opacity: 1;
+      transition: 500ms;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      top: 0;
     }
   }
   &__item {
