feat:added root

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -28,3 +28,4 @@
 @import url(./shared/navbar/navbar.css);
 @import url(./sections/home-5-section/home-5-section.css);
 @import url(./shared/popup-wallet/popup-wallet.css);
+@import url(./sections/ds-root/root.css);
