--- a/css/components/shared/navbar/navbar.scss
+++ b/css/components/shared/navbar/navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
   display: flex;
   width: 100%;
+  max-width: 100vw;
   height: 56px;
   background-color: #fff;
   border-bottom: #e7e3eb;
@@ -12,6 +13,10 @@
   color: #7a6eaa;
   position: relative;
   z-index: 999;
+  transition: 200ms;
+  transition-timing-function: ease-in-out;
+  position: sticky;
+  top: 0;
   &-l,
   &-r {
     display: flex;
@@ -478,37 +483,3 @@
     }
   }
 }
-
-///sticky animation navbar WIP----------------------------------------------------
-/// + dropdown a display: inline-flex;
-#navbar-sticky {
-  position: sticky; // è giusto con position FIXED, da sistemare/discutere approccio col phishing component
-  top: 0;
-  left: 0;
-  width: 100%;
-
-  text-align: center;
-  // background: transparent;
-  z-index: 9999;
-  transition: all 300ms ease-in-out;
-}
-.scroll-down {
-  #navbar-sticky {
-    transform: translate3d(0, -100%, 0);
-  }
-}
-
-.scroll-up {
-  .navbar {
-    filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
-  }
-}
-
-.menu-is-open {
-  overflow: hidden;
-
-  #navbar-sticky {
-    filter: none;
-  }
-}
-///sticky animation navbar WIP----------------------------------------------------
